# sports-betting-bot

./: .dockerignore  .env.example  .gitignore  HISTORICAL_BACKFILL_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_telegram.py
.github/workflows/: ci.yml
data/historical/: download_datasets.py
docker/: Dockerfile  deploy.sh  docker-compose.yml
models/: xgboost_v1.joblib
scripts/: deploy.sh
sql/: schema.sql
src/: __init__.py  main.py  scheduler.py
src/database/: models.py
src/etl/: football_data_extractor.py  historical_backfill.py  mock_data_generator.py  odds_extractor.py  pipeline.py  stats_extractor.py  understat_scraper.py
src/execution/: results_tracker.py
src/models/: feature_builder.py  mock_feature_builder.py  predictor.py
src/utils/: config.py  ev_calculator.py  logger.py  notifier.py
tests/: test_etl.py  test_models.py  test_pipeline.py  test_results_tracker.py  test_scheduler.py
