[project]
name = "sports-betting-bot"
version = "0.1.0"
description = "Data-driven sports betting prediction bot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
