[project]
name = "sports-betting-bot"
version = "0.1.0"
description = "Data-driven sports betting prediction bot"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "scikit-learn>=1.3",
    "alembic>=1.13",
    "tenacity>=8.2",
    "thefuzz>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
